syntax = "proto3";

package policies;

option go_package = "./policies";

service ThingsService {
    rpc Authorize(TAuthorizeReq) returns (TAuthorizeRes) {}
    rpc AuthorizeByKey(TAuthorizeReq) returns (ClientID) {}
    rpc Identify(Key) returns (ClientID) {}
}

message TAuthorizeReq {
    string sub        = 1;
    string obj        = 2;
    string act        = 3;
    string entityType = 4;
}

message TAuthorizeRes {
    bool authorized = 1;
}

message ClientID {
    string value = 1;
}

// If a key is not carrying any information itself, the type
// field can be used to determine how to validate the token.
// Also, different tokens can be encoded in different ways.
message Key {
    string value = 1;
}